# z-os

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  Readme.md  config.mk  docker-compose.yml  qemu.sh  rust-toolchain.toml  setup-toolchain.sh
.cargo/: config.toml
.github/workflows/: build-and-release.yml
debug/: Cargo.toml
debug/src/: lib.rs
kernel/: Cargo.toml  Makefile  config.mk
kernel/src/: lib.rs
kernel/src/arch/: mod.rs
kernel/src/arch/i686/: gdt.asm  gdt.rs  io.rs  mod.rs  tty.rs
kernel/src/arch/i686/isrs/: mod.rs
kernel/src/arch/x86/: gdt.rs  idt.rs  mod.rs  pic.rs  pit_timer.rs  port.rs
kernel/src/arch/x86/asm/: interrupt_handlers.asm  multiboot.asm  start.asm
kernel/src/arch/x86/ps2/: commands.rs  mod.rs
kernel/src/arch/x86/ps2/models/: keyboard.rs  mod.rs  mouse.rs
kernel/src/arch/x86/ps2/structures/: controller_config.rs  mod.rs  status.rs
kernel/src/arch/x86/tty/: cursor.rs  mod.rs  screen.rs
kernel/src/engine/: exceptions.rs  interrupts.rs  mod.rs
kernel/src/engine/human_input/: key.rs  mod.rs
kernel/src/hardware/: mod.rs
kernel/src/lib/: debug.rs  lib.rs
kernel/src/lib/allocator/: mod.rs
kernel/src/lib/drivers/: interface.rs  mod.rs
kernel/src/lib/drivers/keyboard/: driver.rs  mod.rs  ps2.rs
kernel/src/lib/drivers/traits/: driver_meta.rs  mod.rs  read_driver.rs  write_driver.rs
kernel/src/lib/gdt/: mod.rs  tss.rs
kernel/src/lib/interrupts/: idt.rs  interrupt_index.rs  mod.rs
kernel/src/lib/interrupts/handlers/: breakpoints.rs  double_fault.rs  mod.rs  page_fault.rs  pit.rs  ps2.rs
kernel/src/main/: main.rs  ui.rs
kernel/tests/: heap_allocation.rs  stack_overflow.rs
kernel_lib/: Cargo.toml
kernel_lib/src/: kernel_init.rs  lib.rs  test_util.rs
kernel_lib/src/memory/: gdt.rs  mod.rs
kernel_lib/src/memory/alloc/: mod.rs
libc/: Cargo.toml
libc/src/: lib.rs
scripts/: debug.sh  git_hooks.sh  git_submodules.sh  qemu.sh  qemu_debug.sh  rust_nightly.sh  test.sh
src/: allocator.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
src/allocator/: fixed_size_block.rs  linked_list.rs
targets/: config.mk  x86-unknown-z_os.json  x86.mk
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
(+30 files in other folders)
