[package]
name = "kernel_lib"
version = "0.1.0"
authors = ["Zac McChesney <imzacm@gmail.com>"]
edition = "2018"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300

[dependencies]
x86_64 = "0.12.2"
bootloader = { version = "0.9.11", features = ["map_physical_memory"] }
linked_list_allocator = "0.8.6"
spin = "0.5.2"
debug = { path = "../debug" }

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]
